openshift/smoke-test-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: 306e9fb1412dad419442675b199a8b1d35b05fad
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/git-branch: master
    prometheus.io/scrape: "true"
    prometheus.io/port: "9779"
  labels:
    expose: "true"
    app: smoke-test
    provider: fabric8
    version: 1.0-SNAPSHOT
    group: poc
  name: smoke-test
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: smoke-test
    provider: fabric8
    group: poc
